# demo_vscode_plugin

./: .gitignore  README.md  package.json
plugin-rust/: Cargo.toml  package.json
plugin_rs/: package-lock.json  package.json
plugin_rs/custom_command/: Cargo.toml  index.d.ts  index.js  package.json
plugin_rs/custom_command/npm/android-arm-eabi/: README.md  package.json
plugin_rs/custom_command/npm/android-arm64/: README.md  package.json
plugin_rs/custom_command/npm/darwin-arm64/: README.md  package.json
plugin_rs/custom_command/npm/darwin-universal/: README.md  package.json
plugin_rs/custom_command/npm/darwin-x64/: README.md  package.json
plugin_rs/custom_command/npm/freebsd-x64/: README.md  package.json
plugin_rs/custom_command/npm/linux-arm-gnueabihf/: README.md  package.json
plugin_rs/custom_command/npm/linux-arm-musleabihf/: README.md  package.json
plugin_rs/custom_command/npm/linux-arm64-gnu/: README.md  package.json
plugin_rs/custom_command/npm/linux-arm64-musl/: README.md  package.json
plugin_rs/custom_command/npm/linux-riscv64-gnu/: README.md  package.json
plugin_rs/custom_command/npm/linux-x64-gnu/: README.md  package.json
plugin_rs/custom_command/npm/linux-x64-musl/: README.md  package.json
plugin_rs/custom_command/npm/win32-arm64-msvc/: README.md  package.json
plugin_rs/custom_command/npm/win32-ia32-msvc/: README.md  package.json
plugin_rs/custom_command/npm/win32-x64-msvc/: README.md  package.json
plugin_rs/custom_command/src/: lib.rs
plugin_rs/src/: extension.ts  helpers.ts
plugin_ts/: package.json
src/: extension.ts
(+2 files in other folders)
