[package]
edition = "2021"
name = "custom_command"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.6", default-features = false, features = [
  "napi9",
  "serde-json",
  "experimental",
  "latin1",
  "chrono_date",
  "object_indexmap",
] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"